librbd/ManagedLock: handle blocklisting of watcher when reacquiring lock

Fixes: https://tracker.ceph.com/issues/61607
Signed-off-by: Ramana Raja <rraja@redhat.com>